# agent-identity-bridge

./: .gitignore  Dockerfile  LICENSE  README.md  THREAT_MODEL.md  docker-compose.yml  pyproject.toml
aib/: __init__.py  audit.py  cli.py  crypto.py  gateway.py  main.py  passport.py  schemas.py  security.py  translator.py
docs/: index.html
spec/: passport-schema-v0.1.json
tests/: test_cli.py  test_core.py  test_security.py
